Add higher no.of threads